

==================  9.5.0 ==================
New Features
---------------------
* SOLR-17006: Collection creation & adding replicas: User-defined properties are persisted to state.json and
  applied to new replicas, available for use as property substitution in configuration files.  (Vincent Primault)

* SOLR-16974: Circuit Breakers can now be configured globally (janhoy, Christine Poerschke)

Improvements
---------------------
* SOLR-17053: Distributed search with shards.tolerant: if all shards fail, fail the request (Aparna Suresh via David Smiley)

* SOLR-16924: RESTORECORE now sets the UpdateLog to ACTIVE state instead of requiring a separate
  REQUESTAPPLYUPDATES call in Collection restore.  (Julia Maimone, David Smiley)

* SOLR-16907: Fail when parsing an invalid custom permission definition from security.json (janhoy, Uwe Schindler)

* SOLR-17046: SchemaCodecFactory is now the implicit default codec factory.  (hossman)

* SOLR-16943: Extend Solr client tracing coverage to both Jetty Client and Apache HttpClient (Alex Deparvu, David Smiley)

* SOLR-16397: Swap core v2 endpoints have been updated to be more REST-ful.
  SWAP is now available at `POST /api/cores/coreName/swap` (Sanjay Dutt via Jason Gerlowski)

* SOLR-17011: Add tracing spans to internal collection commands (Alex Deparvu)

* SOLR-17041: Make CommitTracker currentTlogSize lazy (Alex Deparvu)

* SOLR-16397: The rename-core v2 endpoint has been updated to be more REST-ful.
  RENAME is now available at `POST /api/cores/coreName/rename` (Sanjay Dutt via Jason Gerlowski)

* SOLR-17035: Add trace id to jetty thread names to improve debuggability via stack traces (Alex Deparvu)

* SOLR-17079: Allow to declare replica placement plugins in solr.xml  (Vincent Primault)

* SOLR-16959: Make the internal CoreSorter implementation configurable in solr.xml  (Vincent Primault)

Optimizations
---------------------